--- a/rrsite/message.html
+++ b/rrsite/message.html
@@ -1,5 +1,11 @@
 ﻿<html>
-<title>Direct Message</title>
+<head>
+<title>CLASS ROLL</title>
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<style>
+img[alt="www.000webhost.com"] {display:none;}
+</style>
+</head>
 <body style="background-color:orange">
 <link rel="stylesheet" href="style.css">
 <img src="spyder.jpg" id="BacktoTop">
