--- a/rrsite/message.html
+++ b/rrsite/message.html
@@ -66,7 +66,7 @@ function showSlides() {
 <input type="text" id="lastname" placeholder="lastname" min=3 max=15 required></input><br>
 <label for="where">From:</label><br>
 <input type="email" id="where" placeholder="your email" required><br>
-<label for="comments">Message:</label><br>ss
+<label for="comments">Message:</label><br>
 <textarea rows=10 cols=30 id="comments"></textarea>
 &nbsp
 &nbsp
