--- a/rrsite/about.html
+++ b/rrsite/about.html
@@ -1,6 +1,10 @@
 ﻿<html>
 <head>
-<title> ABOUT</title>
+<title>CLASS ROLL</title>
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<style>
+img[alt="www.000webhost.com"] {display:none;}
+</style>
 </head>
 <body style="background-color:	#FFF8DC">
 <link rel="stylesheet" href="style.css">
